# esp_freetype

./: .gitignore  CMakeLists.txt  Kconfig  README.md  README_zh.md
example/: esp_lv_example_freetype.c  esp_lv_example_freetype.h
